# laft

./: .gitignore  CMakeLists.txt  Makefile
include/laft/core/: Mixin.hpp  Output.hpp  StringOutput.hpp  laft.hpp
include/laft/math-stats/: Experiment.hpp
include/laft/text/: Format.hpp
perf/: main.cpp
src/core/: StringOutput.cpp
src/text/: Format.cpp
tests/text/: Format.cpp
